<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sand">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDel"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/del"
        app:backgroundTint="@color/colorSymbols"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintRight_toLeftOf="@id/buttonCE"
        app:layout_constraintBottom_toTopOf="@id/buttonSeven"/>

    <Button
        android:id="@+id/buttonCE"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/ce"
        app:backgroundTint="@color/colorSymbols"
        app:layout_constraintLeft_toRightOf="@id/buttonDel"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintRight_toLeftOf="@id/buttonC"
        app:layout_constraintBottom_toTopOf="@id/buttonEight"/>

    <Button
        android:id="@+id/buttonC"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/c"
        app:backgroundTint="@color/colorSymbols"
        app:layout_constraintLeft_toRightOf="@id/buttonCE"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintRight_toLeftOf="@id/buttonSlash"
        app:layout_constraintBottom_toTopOf="@id/buttonNine"/>

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonFour"
        app:layout_constraintRight_toLeftOf="@id/buttonTwo"
        app:layout_constraintBottom_toTopOf="@id/buttonNegativePositive"/>

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_2"
        app:layout_constraintLeft_toRightOf="@id/buttonOne"
        app:layout_constraintTop_toBottomOf="@id/buttonFive"
        app:layout_constraintRight_toLeftOf="@id/buttonThree"
        app:layout_constraintBottom_toTopOf="@id/buttonZero"/>

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_3"
        app:layout_constraintLeft_toRightOf="@id/buttonTwo"
        app:layout_constraintTop_toBottomOf="@id/buttonSix"
        app:layout_constraintRight_toLeftOf="@id/buttonPlus"
        app:layout_constraintBottom_toTopOf="@id/buttonPoint"/>

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSeven"
        app:layout_constraintRight_toLeftOf="@id/buttonFive"
        app:layout_constraintBottom_toTopOf="@id/buttonOne"/>

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_5"
        app:layout_constraintLeft_toRightOf="@id/buttonFour"
        app:layout_constraintTop_toBottomOf="@id/buttonEight"
        app:layout_constraintRight_toLeftOf="@id/buttonSix"
        app:layout_constraintBottom_toTopOf="@id/buttonTwo"/>

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_6"
        app:layout_constraintLeft_toRightOf="@id/buttonFive"
        app:layout_constraintTop_toBottomOf="@id/buttonNine"
        app:layout_constraintRight_toLeftOf="@id/buttonMinus"
        app:layout_constraintBottom_toTopOf="@id/buttonThree" />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonDel"
        app:layout_constraintRight_toLeftOf="@id/buttonEight"
        app:layout_constraintBottom_toTopOf="@id/buttonFour"/>

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_8"
        app:layout_constraintLeft_toRightOf="@id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@id/buttonCE"
        app:layout_constraintRight_toLeftOf="@id/buttonNine"
        app:layout_constraintBottom_toTopOf="@id/buttonFive"/>

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_9"
        app:layout_constraintLeft_toRightOf="@id/buttonEight"
        app:layout_constraintTop_toBottomOf="@id/buttonC"
        app:layout_constraintRight_toLeftOf="@id/buttonMultiply"
        app:layout_constraintBottom_toTopOf="@id/buttonSix"/>

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/_0"
        app:layout_constraintLeft_toRightOf="@id/buttonNegativePositive"
        app:layout_constraintTop_toBottomOf="@id/buttonTwo"
        app:layout_constraintRight_toLeftOf="@id/buttonPoint"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/buttonSlash"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/slash"
        app:backgroundTint="@color/colorSymbols"
        app:layout_constraintBottom_toTopOf="@id/buttonMultiply"
        app:layout_constraintLeft_toRightOf="@id/buttonC"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/multiply"
        app:backgroundTint="@color/colorSymbols"
        app:layout_constraintLeft_toRightOf="@id/buttonNine"
        app:layout_constraintTop_toBottomOf="@id/buttonSlash"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonMinus"/>

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/minus"
        app:backgroundTint="@color/colorSymbols"
        app:layout_constraintLeft_toRightOf="@id/buttonSix"
        app:layout_constraintTop_toBottomOf="@id/buttonMultiply"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonPlus"/>

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/plus"
        app:backgroundTint="@color/colorSymbols"
        app:layout_constraintLeft_toRightOf="@id/buttonThree"
        app:layout_constraintTop_toBottomOf="@id/buttonMinus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonEqually"/>

    <Button
        android:id="@+id/buttonNegativePositive"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/negativePositive"
        app:backgroundTint="@color/colorSymbols"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonOne"
        app:layout_constraintRight_toLeftOf="@id/buttonZero"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/buttonPoint"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/point"
        app:backgroundTint="@color/colorSymbols"
        app:layout_constraintLeft_toRightOf="@id/buttonZero"
        app:layout_constraintTop_toBottomOf="@id/buttonThree"
        app:layout_constraintRight_toLeftOf="@id/buttonEqually"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/buttonEqually"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/equally"
        app:backgroundTint="@color/colorEqually"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/buttonPoint"
        app:layout_constraintTop_toBottomOf="@id/buttonPlus" />

</androidx.constraintlayout.widget.ConstraintLayout>